syntax = "proto3";

package examplecom;

import "proto/othercom/external_enum.proto";
import "proto/othercom/external_child_message.proto";

message MapMessage {
    enum InternalEnum {
        DEFAULT = 0;
        FIRST = 1;
        SECOND = 2;
    }

    message InternalChildMessage {
        string my_string = 1;
    }

    map<int64, InternalEnum> internal_enums = 1;
    map<string, InternalChildMessage> internal_children = 2;

    map<int64, othercom.ExternalEnum> external_enums = 3;
    map<string, othercom.ExternalChildMessage> external_children = 4;

    map<string, int64> primitive_ints = 5;
}
